# Assignment3

./: .gitignore  Cargo.toml  run.sh
src/: configuration_parameters.rs  generator.rs  main.rs  read_data_files.rs  structs.rs
src/process/: mod.rs
